--- a/ScreenPage/HospitalScreen.html
+++ b/ScreenPage/HospitalScreen.html
@@ -17,6 +17,28 @@
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<h1 class="mui-title">院级筛查</h1>
 	</header>
+	<div class="mui-content">
+		<ul class="mui-table-view" style="margin-top: 0px">
+		    <li class="mui-table-view-cell mui-collapse">
+		        <a class="mui-navigate-right" href="#">面板1</a>
+		        <div class="mui-collapse-content">
+		            <p>面板1子内容</p>
+		        </div>
+		    </li>
+		    <li class="mui-table-view-cell mui-collapse">
+		        <a class="mui-navigate-right" href="#">面板</a>
+		            <div class="mui-collapse-content">
+		            <p>面板2子内容</p>
+		        </div>
+		    </li>
+		    <li class="mui-table-view-cell mui-collapse">
+		        <a class="mui-navigate-right" href="#">面板3</a>
+		        <div class="mui-collapse-content">
+		            <p>面板3子内容</p>
+		        </div>
+		    </li>
+		</ul>
+	</div>
 	</body>
 
 </html>
