--- a/ScreenPage/HospitalScreen.html
+++ b/ScreenPage/HospitalScreen.html
@@ -21,8 +21,8 @@
 	</header>
 	<div class="mui-content">
 		<ul class="mui-table-view" style="margin-top: 0px">
-		    <li id="tes" class="mui-table-view-cell mui-collapse">
-		        <a class="mui-navigate-right" href="#">{{ message }}</a>
+		    <li class="mui-table-view-cell mui-collapse">
+		        <a id="tes" class="mui-navigate-right" href="#">{{ message }}</a>
 		        <div class="mui-collapse-content">
 		            <p>面板1子内容</p>
 		        </div>
