增加ajax请求实例

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		
 		onc.addEventListener("tap",function(){
 			 mui.openWindow({
-			 	url:'ScreenPage/HospitalScreen.html',
-				id:'ScreenPage/HospitalScreen.html'
+			 	url:'ajax.html',
+				id:'ajax.html'
 			 })
 		})
 		abm.addEventListener("tap",function(){
